--- a/pixi.toml
+++ b/pixi.toml
@@ -1,10 +1,10 @@
-[project]
+[workspace]
 name = "ssl.mojo"
 version = "0.1.0"
 description = "Add a short description here"
 authors = ["Vikram <vikramsingh001@gmail.com>"]
 channels = ["conda-forge"]
-platforms = ["osx-64"]
+platforms = ["osx-64", "linux-aarch64"]
 
 [tasks]
 
