--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,8 @@
     },
     "mounts": [
         "source=${localWorkspaceFolderBasename}-pixi,target=${containerWorkspaceFolder}/.pixi,type=volume",
-         "source=${localEnv:HOME}/.ssh,target=/tmp/host-ssh,type=bind,consistency=cached"
+        "source=${localEnv:HOME}/.ssh,target=/tmp/host-ssh,type=bind,consistency=cached",
+        "source=${localEnv:HOME}${localEnv:USERPROFILE}/.config/gcloud,target=/home/vscode/.config/gcloud,type=bind,consistency=cached"
     ],
     "customizations": {
         "vscode": {
@@ -20,10 +21,12 @@
                 "modular-mojotools.vscode-mojo",
                 "ms-python.python",
                 "charliermarsh.ruff",
-                "ms-azuretools.vscode-docker"
+                "ms-azuretools.vscode-docker",
+                "prettier.prettier-vscode"
             ],
             "settings": {
-                "python.defaultInterpreterPath": ".pixi/envs/default/bin/python"
+                "python.defaultInterpreterPath": ".pixi/envs/default/bin/python",
+                "formatter.formatOnSave": true
             }
         }
     },
