--- a/pixi.toml
+++ b/pixi.toml
@@ -12,3 +12,4 @@ platforms = ["linux-aarch64", "osx-arm64"]
 # lightbug_http 0.25.7 does not seem to work
 mojo = ">=0.25.6,<0.26"
 lightbug_http = ">=0.25.6,<0.25.8"
+requests = ">=2.32.5,<3"
