--- a/pixi.toml
+++ b/pixi.toml
@@ -8,13 +8,10 @@ platforms = ["linux-aarch64", "osx-arm64"]
 
 [tasks]
 test-specs = "npx quint test specs/crypto_hkdf.qnt"
-test-sha256 = "mojo run -I src -I tests tests/sha256_test.mojo"
-test-hmac = "mojo run -I src -I tests tests/hmac_test.mojo"
-test-hkdf = "mojo run -I src -I tests tests/hkdf_test.mojo"
-test-all = { depends-on = ["test-specs", "test-sha256", "test-hmac", "test-hkdf"] }
+test-stage1 = "mojo run -I . tests/test_sha256.mojo && mojo run -I . tests/test_hmac.mojo && mojo run -I . tests/test_hkdf.mojo"
+test-all = { depends-on = ["test-specs", "test-stage1"] }
 
 [dependencies]
-# lightbug_http 0.25.7 does not seem to work
 mojo = ">=0.25.6,<0.26"
 lightbug_http = ">=0.25.6,<0.25.8"
 requests = ">=2.32.5,<3"
