--- a/pixi.toml
+++ b/pixi.toml
@@ -7,11 +7,10 @@ channels = ["conda-forge", "https://conda.modular.com/max", "https://repo.prefix
 platforms = ["linux-aarch64", "osx-arm64"]
 
 [tasks]
-test-specs = "npx quint test specs/crypto_hkdf.qnt"
+test-specs = "npx quint test specs/crypto_sha256.qnt && npx quint test specs/crypto_hmac.qnt && npx quint test specs/crypto_hkdf.qnt"
 test-stage1 = "mojo run -I . tests/test_sha256.mojo && mojo run -I . tests/test_hmac.mojo && mojo run -I . tests/test_hkdf.mojo"
 test-all = { depends-on = ["test-specs", "test-stage1"] }
 
 [dependencies]
 mojo = ">=0.25.6,<0.26"
 lightbug_http = ">=0.25.6,<0.25.8"
-requests = ">=2.32.5,<3"
