--- a/pixi.toml
+++ b/pixi.toml
@@ -2,7 +2,7 @@
 name = "ssl.mojo"
 version = "0.1.0"
 description = "Add a short description here"
-authors = ["Vikram <vikramsingh001@gmail.com>"]
+authors = ["vikramsg"]
 channels = ["conda-forge", "https://conda.modular.com/max", "https://repo.prefix.dev/modular-community"]
 platforms = ["linux-aarch64", "osx-arm64"]
 
