--- a/pixi.toml
+++ b/pixi.toml
@@ -7,9 +7,11 @@ channels = ["conda-forge", "https://conda.modular.com/max", "https://repo.prefix
 platforms = ["linux-aarch64", "osx-arm64"]
 
 [tasks]
-test-specs = "npx quint test specs/crypto_sha256.qnt && npx quint test specs/crypto_hmac.qnt && npx quint test specs/crypto_hkdf.qnt"
+test-specs = "npx quint test specs/crypto_sha256.qnt && npx quint test specs/crypto_hmac.qnt && npx quint test specs/crypto_hkdf.qnt && npx quint test specs/crypto_x25519.qnt && npx quint test specs/crypto_aead.qnt && npx quint test specs/tls_record.qnt"
 test-stage1 = "mojo run -I . tests/test_sha256.mojo && mojo run -I . tests/test_hmac.mojo && mojo run -I . tests/test_hkdf.mojo"
-test-all = { depends-on = ["test-specs", "test-stage1"] }
+test-stage2 = "mojo run -I . tests/test_x25519.mojo"
+test-stage3 = "mojo run -I . tests/test_aes_gcm.mojo && mojo run -I . tests/test_record_layer.mojo"
+test-all = { depends-on = ["test-specs", "test-stage1", "test-stage2", "test-stage3"] }
 
 [dependencies]
 mojo = ">=0.25.6,<0.26"
