--- a/pixi.toml
+++ b/pixi.toml
@@ -8,10 +8,9 @@ platforms = ["linux-aarch64", "osx-arm64"]
 
 [tasks]
 test-specs = "npx quint test specs/crypto_sha256.qnt && npx quint test specs/crypto_hmac.qnt && npx quint test specs/crypto_hkdf.qnt && npx quint test specs/crypto_x25519.qnt && npx quint test specs/crypto_aead.qnt && npx quint test specs/tls_record.qnt"
-test-stage1 = "mojo run -I . tests/test_sha256.mojo && mojo run -I . tests/test_hmac.mojo && mojo run -I . tests/test_hkdf.mojo"
-test-stage2 = "mojo run -I . tests/test_x25519.mojo"
-test-stage3 = "mojo run -I . tests/test_aes_gcm.mojo && mojo run -I . tests/test_record_layer.mojo"
-test-all = { depends-on = ["test-specs", "test-stage1", "test-stage2", "test-stage3"] }
+test-crypto = "mojo run -I . tests/test_sha256.mojo && mojo run -I . tests/test_hmac.mojo && mojo run -I . tests/test_hkdf.mojo && mojo run -I . tests/test_x25519.mojo && mojo run -I . tests/test_aes_gcm.mojo "
+test-tls = "mojo run -I . tests/test_record_layer.mojo"
+test-all = { depends-on = ["test-specs", "test-crypto", "test-tls"] }
 
 [dependencies]
 mojo = ">=0.25.6,<0.26"
