--- a/pixi.toml
+++ b/pixi.toml
@@ -7,6 +7,7 @@ channels = ["conda-forge", "https://conda.modular.com/max", "https://repo.prefix
 platforms = ["linux-aarch64", "osx-arm64"]
 
 [tasks]
+format = "mojo run scripts/sort_imports.mojo . && mojo format ."
 test-specs = "npx quint test specs/crypto_sha256.qnt && npx quint test specs/crypto_hmac.qnt && npx quint test specs/crypto_hkdf.qnt && npx quint test specs/crypto_x25519.qnt && npx quint test specs/crypto_aead.qnt && npx quint test specs/tls_record.qnt"
 test-crypto = "mojo run -I . tests/test_sha256.mojo && mojo run -I . tests/test_hmac.mojo && mojo run -I . tests/test_hkdf.mojo && mojo run -I . tests/test_x25519.mojo && mojo run -I . tests/test_aes_gcm.mojo "
 test-tls = "mojo run -I . tests/test_record_layer.mojo"
