--- a/pixi.toml
+++ b/pixi.toml
@@ -11,8 +11,10 @@ format = "mojo run scripts/sort_imports.mojo . && mojo format ."
 test-specs = "npx quint test specs/crypto_sha256.qnt && npx quint test specs/crypto_hmac.qnt && npx quint test specs/crypto_hkdf.qnt && npx quint test specs/crypto_x25519.qnt && npx quint test specs/crypto_aead.qnt && npx quint test specs/tls_record.qnt"
 test-crypto = "mojo run -I . tests/test_sha256.mojo && mojo run -I . tests/test_hmac.mojo && mojo run -I . tests/test_hkdf.mojo && mojo run -I . tests/test_x25519.mojo && mojo run -I . tests/test_aes_gcm.mojo "
 test-tls = "mojo run -I . tests/test_record_layer.mojo"
-test-all = { depends-on = ["test-specs", "test-crypto", "test-tls"] }
+test-trace = "mojo run -I . scripts/trace_runner.mojo tests/trace_config.json"
+test-all = { depends-on = ["test-specs", "test-crypto", "test-tls", "test-trace"] }
 
 [dependencies]
 mojo = ">=0.25.6,<0.26"
-lightbug_http = ">=0.25.6,<0.25.8"
+lightbug_http = ">=0.25.6,<0.26"
+emberjson = ">=0.2.0"
