--- a/pixi.toml
+++ b/pixi.toml
@@ -20,3 +20,9 @@ test-all = { depends-on = ["test-specs", "test-crypto", "test-pki", "test-tls", 
 mojo = ">=0.25.6,<0.26"
 lightbug_http = ">=0.25.6,<0.26"
 emberjson = ">=0.2.0"
+
+[feature.dev.pypi-dependencies]
+cryptography = "*"
+
+[environments]
+default = ["dev"]
