--- a/pixi.toml
+++ b/pixi.toml
@@ -28,6 +28,7 @@ test-all = { depends-on = ["test-crypto", "test-tls", "test-https", "test-pki", 
 mojo = ">=0.25.6,<0.26"
 lightbug_http = ">=0.25.6,<0.26"
 emberjson = ">=0.2.0"
+ripgrep = ">=15.1.0,<16"
 
 [feature.dev.pypi-dependencies]
 cryptography = "*"
