--- a/pixi.toml
+++ b/pixi.toml
@@ -28,12 +28,12 @@ test-all = { depends-on = ["test-crypto", "test-tls", "test-https", "test-pki", 
 mojo = ">=0.25.6,<0.26"
 lightbug_http = ">=0.25.6,<0.26"
 emberjson = ">=0.2.0"
-# TODO: Move these into seprate env 
-ripgrep = ">=15.1.0,<16"
-scapy = ">=2.7.0,<3"
 
 [feature.dev.pypi-dependencies]
 cryptography = "*"
+scapy = ">=2.7.0,<3"
+ecdsa = ">=0.19.1,<0.20"
+pycryptodomex = ">=3.23.0,<4"
 
 [environments]
 default = ["dev"]
